# restack

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CLI.md  developer-primer.adoc
host/: package-lock.json  package.json
host/src/: cli.ts  index.ts  mcp.ts  types.ts  ui.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json  postinstall.js
npm/restack-cli/: package.json
npm/scripts/: platforms.json
npm/win32-x64/: package.json  postinstall.js
scripts/: build-release.sh  generate-types.sh
src/: config.rs  error.rs  format.rs  id.rs  main.rs  output.rs  types.rs  version.rs
src/commands/: ci.rs  conflicts.rs  env.rs  init.rs  integration.rs  mod.rs  pipeline.rs  pr.rs  promote.rs  protection.rs  rebuild.rs  refresh.rs  release.rs  repo.rs  topic.rs
src/config/: mod.rs  repo_config.rs
src/core/: blame_service.rs  ci_service.rs  discovery_service.rs  env_ci_service.rs  env_init_service.rs  env_service.rs  env_sync_service.rs  hotfix_service.rs  mod.rs  pipeline_service.rs  pr_service.rs  promote_service.rs  protection_service.rs  provider_service.rs  rebuild_service.rs  release_service.rs  repo_service.rs  speculative_ci_service.rs  topic_service.rs  workspace.rs
src/db/: conflict_repo.rs  (+9 more)
tests/: repo_add_dot_test.rs  repo_add_test.rs  repo_add_twice_test.rs  repo_delete_reclone_test.rs  repo_resolution_test.rs  restack_yml_test.rs  serve_test.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+34 files in other folders)
