[package]
name = "restack"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "restack"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Interactive prompts
dialoguer = "0.11"
ctrlc = "3.4"

# Utilities
thiserror = "2.0"
owo-colors = { version = "4", features = ["supports-colors"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.2"
sha2 = "0.10"


[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
